--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
