--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "axios": "^0.19.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.6"
+    "express-fileupload": "^1.1.6",
+    "mongoose": "^5.8.6",
+    "mysql": "^2.17.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.22"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
