--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "ica-web-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "The official web api for ICA Yabatech",
+  "main": "server.ts",
   "scripts": {
     "dev": "nodemon server.ts",
-    "start": "tsc && node build/app"
+    "start": "ts-node -r dotenv/config server.ts"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "heroku",
+    "ica",
+    "ingressive"
+  ],
+  "author": "Destiny Ajakaiye",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.6",
     "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.18.1",
@@ -19,17 +22,23 @@
     "dotenv": "^8.2.0",
     "envalid": "^6.0.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
     "mongoose": "^5.8.6",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.4",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
+  },
+  "engine": {
+    "node": "12.x"
   }
 }
